--- a/angular.json
+++ b/angular.json
@@ -75,7 +75,13 @@
               "browserTarget": "cart:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "browserTarget": "cart:build",
+            "proxyConfig": "src/proxy.config.json"
+        }
+
+
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
